Fix HTML encoding issues in about.html

--- a/about.html
+++ b/about.html
@@ -49,11 +49,7 @@
       <div class="row align-items-center">
         
         <div class="col-lg-6 mb-4 mb-lg-0">
-          <img 
-            src="https://img.freepik.com/premium-photo/close-up-hand-holding-coffee-cup_1048944-3716426.jpg" 
-            class="img-fluid rounded shadow-lg" 
-            alt="Barista pouring latte art"
-          >
+          <img src="https://img.freepik.com/premium-photo/close-up-hand-holding-coffee-cup_1048944-3716426.jpg" class="img-fluid rounded shadow-lg" alt="Barista pouring latte art">
         </div>
 
         <div class="col-lg-6">
@@ -93,4 +89,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
+
 </html>
